--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       memlock:
         soft: -1
         hard: -1
-    volumes:
-      - ./data/elasticsearch:/usr/share/elasticsearch/data
+    # volumes:
+    #   - ./data/elasticsearch:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
       - 9300:9300
